--- a/index.html
+++ b/index.html
@@ -1,11 +1,93 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>example</title>
-</head>
-<body>
-  <h1>Наш синхронизированный сайт</h1>
-  <h2>Ольга внесла изменения на сайт</h2>
-</body>
+<html lang="ru">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Урок 9</title>
+
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script> 
+    <![endif]-->
+  </head>
+  <body>
+    <h1 class="text-center"> Урок 9. Колоночная верстка </h1>
+    <!-- =====================Главный экран================= -->
+    <section id="main">
+      <div class="container">
+        <div class="row main_header text-center">
+          <h2> Пример колоночной верстки <br> bootstrap 3 </h2>
+        </div>
+      </div>
+    </section>
+    <br>
+    <section id="icons">
+      <div class="conteiner">
+        <div class="row text-center">
+          <div class="col-lg-2 col-md-4 col-sm-6 col-xs1">
+            <img src="img/ic.png" alt=" Иконка 1">
+            <h3>Заголовок 1</h3>
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-6 col-xs1">
+            <img src="img/ic.png" alt=" Иконка 2">
+            <h3>Заголовок 2</h3>
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-6 col-xs1">
+            <img src="img/ic.png" alt=" Иконка 3">
+            <h3>Заголовок 3</h3>
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-6 col-xs1">
+            <img src="img/ic.png" alt=" Иконка 4">
+            <h3>Заголовок 4</h3>
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-6 col-xs1">
+            <img src="img/ic.png" alt=" Иконка 5">
+            <h3>Заголовок 5</h3>
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-6 col-xs1">
+            <img src="img/ic.png" alt=" Иконка 6">
+            <h3>Заголовок 6</h3>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="example">
+       <div class="conteiner">
+         <div class="row level_1">
+           <div class="box col-lg-8">
+             <div class="row level_2">
+               <div class="box_in col-lg-3">
+                 Элемент 1
+               </div>
+               <div class="box_in col-lg-3">
+                 Элемент 2
+               </div>
+               <div class="box_in col-lg-3">
+                 Элемент 3
+               </div>
+               <div class="box_in col-lg-3">
+                 Элемент 4
+               </div>
+
+             </div>
+
+           </div>
+         </div>
+       </div>
+     </section> 
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>b
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+  </body>
 </html>
