--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Урок 9</title>
+    <title>Урок 10_2. Позиционирование</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -19,75 +19,29 @@
     <![endif]-->
   </head>
   <body>
-    <h1 class="text-center"> Урок 9. Колоночная верстка </h1>
-    <!-- =====================Главный экран================= -->
-    <section id="main">
-      <div class="container">
-        <div class="row main_header text-center">
-          <h2> Пример колоночной верстки <br> bootstrap 3 </h2>
-        </div>
-      </div>
-    </section>
-    <br>
-    <section id="icons">
-      <div class="conteiner">
-        <div class="row text-center">
-          <div class="col-lg-2 col-md-4 col-sm-6 col-xs1">
-            <img src="img/ic.png" alt=" Иконка 1">
-            <h3>Заголовок 1</h3>
-          </div>
-          <div class="col-lg-2 col-md-4 col-sm-6 col-xs1">
-            <img src="img/ic.png" alt=" Иконка 2">
-            <h3>Заголовок 2</h3>
-          </div>
-          <div class="col-lg-2 col-md-4 col-sm-6 col-xs1">
-            <img src="img/ic.png" alt=" Иконка 3">
-            <h3>Заголовок 3</h3>
-          </div>
-          <div class="col-lg-2 col-md-4 col-sm-6 col-xs1">
-            <img src="img/ic.png" alt=" Иконка 4">
-            <h3>Заголовок 4</h3>
-          </div>
-          <div class="col-lg-2 col-md-4 col-sm-6 col-xs1">
-            <img src="img/ic.png" alt=" Иконка 5">
-            <h3>Заголовок 5</h3>
-          </div>
-          <div class="col-lg-2 col-md-4 col-sm-6 col-xs1">
-            <img src="img/ic.png" alt=" Иконка 6">
-            <h3>Заголовок 6</h3>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section id="example">
-       <div class="conteiner">
-         <div class="row level_1">
-           <div class="box col-lg-8">
-             <div class="row level_2">
-               <div class="box_in col-lg-3">
-                 Элемент 1
-               </div>
-               <div class="box_in col-lg-3">
-                 Элемент 2
-               </div>
-               <div class="box_in col-lg-3">
-                 Элемент 3
-               </div>
-               <div class="box_in col-lg-3">
-                 Элемент 4
-               </div>
-
-             </div>
-
-           </div>
+        <!-- =====================Главный экран================= -->
+    <div class="box">
+       <div class="row">
+         <div class="col-sm-6">
+           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt recusandae obcaecati provident. Ea incidunt sunt adipisci dolores molestiae temporibus aspernatur aliquid nesciunt, nisi, est ipsam blanditiis. Sint aut saepe, unde? cccccc</p>
+         </div>
+         <div class="col-sm-6">
+           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque magnam harum, iusto expedita sapiente ut error excepturi amet. Modi pariatur vero tempore. Nulla harum debitis provident, vero nostrum repudiandae porro.</p>
          </div>
        </div>
-     </section> 
+    </div>
+    
+
+
+   <!--  <div class="box">      
+    </div>
+   
+    <div class="box-2">      
+    </div> -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>b
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Include all comp  iled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
