--- a/Zaytceva_lesson14/index.html
+++ b/Zaytceva_lesson14/index.html
@@ -80,7 +80,7 @@
               Koc Koi Tomi
             </h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-            <buttom class="process-btn"><span class="btn-plus"></span>Know More</buttom>
+            <button class="process-btn"><span class="btn-plus"></span>Know More</button>
           </div>
         </div>
         <div class="col-lg-3 col-sm-3">
@@ -90,7 +90,7 @@
               Koimona Set
             </h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-            <buttom class="process-btn"><span class="btn-plus"></span>Know More</buttom>
+            <button class="process-btn"><span class="btn-plus"></span>Know More</button>
           </div>
         </div>
         <div class="col-lg-3 col-sm-3">
@@ -100,7 +100,7 @@
               Setting Koire
             </h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-            <buttom class="process-btn"><span class="btn-plus"></span>Know More</buttom>
+            <button class="process-btn"><span class="btn-plus"></span>Know More</button>
           </div>
         </div>
         <div class="col-lg-3 col-sm-3">
@@ -110,7 +110,7 @@
               Ko Image Lara
             </h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-            <buttom class="process-btn"><span class="btn-plus"></span>Know More</buttom>
+            <button class="process-btn"><span class="btn-plus"></span>Know More</button>
           </div>
         </div>
       </div>
