--- a/Zaytceva_lesson19/index.html
+++ b/Zaytceva_lesson19/index.html
@@ -233,7 +233,6 @@
     </section>
 
  <!-- Services -->
-
     <section id="services">
       <div class="container">
         <div class="row">
@@ -262,7 +261,7 @@
                   <button data-toggle="modal" data-target="#modal-2" class="services-btn"><span class="btn-plus"></span> Know more</button>
                 </div>
                 <div class="col-lg-4">
-                  <img class="img-responsive center-block" src="img/services/info-1.png" alt="Часы">
+                  <img class="img-responsive center-block services-img" src="img/services/info-1.png" alt="Часы">
                 </div>
               </div> <!-- row -->
               <div id="global" role="tabpanel" class="row tab-pane fade">
@@ -275,7 +274,7 @@
                   <button data-toggle="modal" data-target="#modal-3" class="services-btn"><span class="btn-plus"></span> Know more</button>
                 </div>
                 <div class="col-lg-4">
-                  <img class="img-responsive center-block" src="img/services/info-1.png" alt="Часы">
+                  <img class="img-responsive center-block services-img" src="img/services/info-1.png" alt="Часы">
                 </div>
               </div> <!-- row -->
               <div id="play" role="tabpanel" class="row tab-pan fade">
@@ -288,7 +287,7 @@
                   <button data-toggle="modal" data-target="#modal-4" class="services-btn"><span class="btn-plus"></span> Know more</button>
                 </div>
                 <div class="col-lg-4">
-                  <img class="img-responsive center-block" src="img/services/info-1.png" alt="Часы">
+                  <img class="img-responsive center-block services-img" src="img/services/info-1.png" alt="Часы">
                 </div>
               </div> <!-- row -->
             </div>
