--- a/Zaytceva_lesson20/index.html
+++ b/Zaytceva_lesson20/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Lesson 19</title>
+    <title>Lesson 20</title>
     <script src="js/less.min.js"></script>
     <link rel="stylesheet" href="css/style.less">
 
@@ -53,12 +53,12 @@
           <div class="col-lg-4 col-lg-offset-0 col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2">
             <div class="main-form wow bounce">
               <p class="main-form-header"><span>Send</span> A Message</p>
-              <form action="smart.php" method="POST">
+              <form id="main-form-ajax" action="#">
                 <input type="hidden" name="whatever" value="Главная форма">
                 <input type="text" name="username" placeholder="Your Name">
                 <input type="email" name="email" required placeholder="Your Email">
                 <textarea name="user_message" placeholder="Your Message" rows="3"></textarea>
-                <button data-toggle="modal" data-target="#modal-9" class="main-form-btn wow tada" type="submit">Send Message<span>&rarr;</span></button>
+                <button class="main-form-btn wow tada" type="submit">Send Message<span>&rarr;</span></button>
               </form>
             </div>
           </div>
@@ -623,24 +623,24 @@
       </div>
     </div>
     
-    <!-- Modal Bootstrap 9-->
-    <div class="modal fade" id="modal-9" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="myModalLabel">Спасибо!</h4>
-          </div>
-          <div class="modal-body">
-            <p>Ваши данные будут обработаны!</p>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
-          </div>
-        </div>
+<!--     Modal Bootstrap 9
+<div class="modal fade" id="modal-9" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Спасибо!</h4>
+      </div>
+      <div class="modal-body">
+        <p>Ваши данные будут обработаны!</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
+  </div>
+</div> -->
 
      <!-- Modal Bootstrap 10-->
     <div class="modal fade" id="modal-10" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -709,6 +709,23 @@
         });
       });
     </script>
+    <script>
+      $(document).ready(function() {
+        $("#main-form-ajax").submit(function() {
+          $.ajax({
+            type: "POST",
+            url: "mail.php",
+            data: $(this).serialize()
+          }).done(function() {
+            $(this).find("input").val("");
+            alert("Спасибо за заявку! Скоро мы с вами свяжемся.");
+            $("#main-form-ajax").trigger("reset");
+          });
+          return false;
+        });
+      });
+    </script>
+
   </body>
 </html>
 
