--- a/Zaytceva_lesson21/index.html
+++ b/Zaytceva_lesson21/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Lesson 21 Jquery </title>
+    <title>Lesson 21 Jquery1 </title>
     <script src="js/less.min.js"></script>
     <link rel="stylesheet" href="css/style.less">
 
@@ -666,10 +666,10 @@
     <span class="close-nav">&times;</span>
     <ul>
       <li><a href="">Главная</a></li>
-      <li><a href=""></a>Портфолио</li>
-      <li><a href=""></a>Карта</li>
-      <li><a href=""></a>Цены</li>
-      <li><a href=""></a>Контакты</li>
+      <li><a href="">Портфолио</a></li>
+      <li><a href="">Карта</a></li>
+      <li><a href="">Цены</a></li>
+      <li><a href="">Контакты</a></li>
     </ul>
   </div>
 
